--- a/Backend/Insomnia.yaml
+++ b/Backend/Insomnia.yaml
@@ -1,12 +1,110 @@
 _type: export
 __export_format: 4
-__export_date: 2022-03-22T21:05:29.611Z
-__export_source: insomnia.desktop.app:v2022.2.0
+__export_date: 2022-04-28T02:20:53.792Z
+__export_source: insomnia.desktop.app:v2022.2.1
 resources:
-  - _id: req_cf85b662696f4f53b32a095afc0f0fb7
-    parentId: fld_68cee84e15dd489e8943a061a1ac5ff6
-    modified: 1647947809428
-    created: 1647708807907
+  - _id: req_bc384012d7314a7c8b45991c239218bc
+    parentId: fld_394ba22e73ba484882d8915f2263d40d
+    modified: 1651112120925
+    created: 1651112120925
+    url: http://localhost:3000/api/auth/roles
+    name: Add Role
+    description: ""
+    method: POST
+    body:
+      mimeType: application/json
+      text: |-
+        {
+        	"name": "owner"
+        }
+    parameters: []
+    headers:
+      - name: Content-Type
+        value: application/json
+        id: pair_72098b7a018d4c6cae4ba639e139e5c8
+    authentication: {}
+    metaSortKey: -1648928613246
+    isPrivate: false
+    settingStoreCookies: true
+    settingSendCookies: true
+    settingDisableRenderRequestBody: false
+    settingEncodeUrl: true
+    settingRebuildPath: true
+    settingFollowRedirects: global
+    _type: request
+  - _id: fld_394ba22e73ba484882d8915f2263d40d
+    parentId: wrk_30725d7a24e74553b738540b6d101bab
+    modified: 1651112120922
+    created: 1651112120922
+    name: Auth
+    description: ""
+    environment: {}
+    environmentPropertyOrder: null
+    metaSortKey: -1648928599780
+    _type: request_group
+  - _id: wrk_30725d7a24e74553b738540b6d101bab
+    parentId: null
+    modified: 1651112120762
+    created: 1651112120762
+    name: FME
+    description: ""
+    scope: collection
+    _type: workspace
+  - _id: req_5935c722a71047ad86d97319031f9286
+    parentId: fld_394ba22e73ba484882d8915f2263d40d
+    modified: 1651112120929
+    created: 1651112120929
+    url: http://localhost:3000/api/auth/roles
+    name: Get Roles
+    description: ""
+    method: GET
+    body: {}
+    parameters: []
+    headers: []
+    authentication: {}
+    metaSortKey: -1648928613196
+    isPrivate: false
+    settingStoreCookies: true
+    settingSendCookies: true
+    settingDisableRenderRequestBody: false
+    settingEncodeUrl: true
+    settingRebuildPath: true
+    settingFollowRedirects: global
+    _type: request
+  - _id: req_437223e5f18b4d90b073e26d50a8132c
+    parentId: fld_394ba22e73ba484882d8915f2263d40d
+    modified: 1651112120934
+    created: 1651112120934
+    url: localhost:3000/api/auth/login
+    name: Login
+    description: ""
+    method: POST
+    body:
+      mimeType: application/json
+      text: |-
+        {
+        	"username": "mupikga",
+        	"password": "1234"
+        }
+    parameters: []
+    headers:
+      - name: Content-Type
+        value: application/json
+        id: pair_49b69341e4584483a122a67d430b0f9d
+    authentication: {}
+    metaSortKey: -1648928613146
+    isPrivate: false
+    settingStoreCookies: true
+    settingSendCookies: true
+    settingDisableRenderRequestBody: false
+    settingEncodeUrl: true
+    settingRebuildPath: true
+    settingFollowRedirects: global
+    _type: request
+  - _id: req_3555b4b9de824feeb02b4c5811d5f850
+    parentId: fld_8413b105f14f447395f54af68c552ebe
+    modified: 1651112120828
+    created: 1651112120828
     url: http://localhost:3000/api/users
     name: Add User
     description: ""
@@ -35,28 +133,20 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: fld_68cee84e15dd489e8943a061a1ac5ff6
-    parentId: wrk_b18497235b484bf6a5244309ef1a9254
-    modified: 1647709880266
-    created: 1647709807242
+  - _id: fld_8413b105f14f447395f54af68c552ebe
+    parentId: wrk_30725d7a24e74553b738540b6d101bab
+    modified: 1651112120816
+    created: 1651112120816
     name: Users
     description: ""
     environment: {}
     environmentPropertyOrder: null
     metaSortKey: -1647709856242
     _type: request_group
-  - _id: wrk_b18497235b484bf6a5244309ef1a9254
-    parentId: null
-    modified: 1647708807882
-    created: 1647708807882
-    name: API Rest - G1
-    description: ""
-    scope: collection
-    _type: workspace
-  - _id: req_dbdcf9a60c144485922c1ccd1e98a247
-    parentId: fld_68cee84e15dd489e8943a061a1ac5ff6
-    modified: 1647709903577
-    created: 1647708807901
+  - _id: req_5f5136adce10484799a098c8291ee4e4
+    parentId: fld_8413b105f14f447395f54af68c552ebe
+    modified: 1651112120818
+    created: 1651112120818
     url: http://localhost:3000/api/users
     name: Get Users
     description: ""
@@ -74,10 +164,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_33f29f2c222b4a55ac56db8ff963a6f4
-    parentId: fld_68cee84e15dd489e8943a061a1ac5ff6
-    modified: 1647709952784
-    created: 1647708807904
+  - _id: req_d087b583d94f4424943869be876358b3
+    parentId: fld_8413b105f14f447395f54af68c552ebe
+    modified: 1651112120823
+    created: 1651112120823
     url: http://localhost:3000/api/users/YourName
     name: Get UserByName
     description: ""
@@ -95,10 +185,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_fc7c897132fb403b9cb0f513485af8e0
-    parentId: fld_68cee84e15dd489e8943a061a1ac5ff6
-    modified: 1647947515346
-    created: 1647708807910
+  - _id: req_34ee0b41d61a4c43acf923e74d8693c3
+    parentId: fld_8413b105f14f447395f54af68c552ebe
+    modified: 1651112120832
+    created: 1651112120832
     url: http://localhost:3000/api/users/YourName
     name: Update User
     description: ""
@@ -124,10 +214,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_3ac13fa82d99456fb40accc858d9c705
-    parentId: fld_68cee84e15dd489e8943a061a1ac5ff6
-    modified: 1647709958051
-    created: 1647708807913
+  - _id: req_b86e2f4b9761420e9355ebc384014253
+    parentId: fld_8413b105f14f447395f54af68c552ebe
+    modified: 1651112120837
+    created: 1651112120837
     url: http://localhost:3000/api/users/Arnau
     name: Delete User
     description: ""
@@ -145,10 +235,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_42d050aa29fe4944ba82e54ddcf68fae
-    parentId: fld_ee41acdda325479e9d0f3200e0a656b0
-    modified: 1647947763250
-    created: 1647708807943
+  - _id: req_45607b9149b34e7f999d9624aabe0ebf
+    parentId: fld_f6c6974373b84162884a9c7f9e1ad27d
+    modified: 1651112120794
+    created: 1651112120794
     url: http://localhost:3000/api/activities
     name: Add Activity
     description: ""
@@ -178,20 +268,20 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: fld_ee41acdda325479e9d0f3200e0a656b0
-    parentId: wrk_b18497235b484bf6a5244309ef1a9254
-    modified: 1647709882571
-    created: 1647709799295
+  - _id: fld_f6c6974373b84162884a9c7f9e1ad27d
+    parentId: wrk_30725d7a24e74553b738540b6d101bab
+    modified: 1651112120781
+    created: 1651112120781
     name: Activities
     description: ""
     environment: {}
     environmentPropertyOrder: null
     metaSortKey: -1647709856217
     _type: request_group
-  - _id: req_253d1603d80643a899045e4c7eba995d
-    parentId: fld_ee41acdda325479e9d0f3200e0a656b0
-    modified: 1647947830852
-    created: 1647947743307
+  - _id: req_a2ccc342b8264e64b0a9dcf288190fb0
+    parentId: fld_f6c6974373b84162884a9c7f9e1ad27d
+    modified: 1651112120810
+    created: 1651112120810
     url: http://localhost:3000/api/activities/adduseractivity
     name: Add User Activity
     description: ""
@@ -218,10 +308,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_8a4faead500148bf9cb318e143d1f09d
-    parentId: fld_ee41acdda325479e9d0f3200e0a656b0
-    modified: 1647709895848
-    created: 1647708807936
+  - _id: req_faecf03ae2ae4f6884b7cf8e689c0768
+    parentId: fld_f6c6974373b84162884a9c7f9e1ad27d
+    modified: 1651112120784
+    created: 1651112120784
     url: http://localhost:3000/api/activities
     name: Get Activities
     description: ""
@@ -239,10 +329,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_7b8ee30d580a40ad98d714d8dd2f4e51
-    parentId: fld_ee41acdda325479e9d0f3200e0a656b0
-    modified: 1647709846920
-    created: 1647708807940
+  - _id: req_50a81f32f4d34b9096e13cefd07b4802
+    parentId: fld_f6c6974373b84162884a9c7f9e1ad27d
+    modified: 1651112120788
+    created: 1651112120788
     url: http://localhost:3000/api/activities/YourName
     name: Get ActivitiesByName
     description: ""
@@ -260,10 +350,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_8d39ff9427de4700a729c9269f7fdc1a
-    parentId: fld_ee41acdda325479e9d0f3200e0a656b0
-    modified: 1647947719217
-    created: 1647708807948
+  - _id: req_da6300153bc94b34a04d8c2aebb9c5e8
+    parentId: fld_f6c6974373b84162884a9c7f9e1ad27d
+    modified: 1651112120804
+    created: 1651112120804
     url: http://localhost:3000/api/activities/YourActivity
     name: Update Activity
     description: ""
@@ -289,10 +379,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_b363d06d482748febbb8aefdd38edf07
-    parentId: fld_ee41acdda325479e9d0f3200e0a656b0
-    modified: 1647709829324
-    created: 1647708807946
+  - _id: req_06c2c5583b2743f79fd5f323589a3248
+    parentId: fld_f6c6974373b84162884a9c7f9e1ad27d
+    modified: 1651112120800
+    created: 1651112120800
     url: http://localhost:3000/api/activites/ActivityName
     name: Delete Activity
     description: ""
@@ -310,10 +400,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_83f165658bbd476fa5f508e98cc5f785
-    parentId: fld_8c73ca2b5e5342c6bae248090de78c68
-    modified: 1647947827841
-    created: 1647708807933
+  - _id: req_cd6b991ac33e4ebdb9a2670625bfc349
+    parentId: fld_54f9a5116eeb4c868fe23a6639641081
+    modified: 1651112120854
+    created: 1651112120854
     url: http://localhost:3000/api/ratings
     name: Add Rating
     description: ""
@@ -342,20 +432,20 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: fld_8c73ca2b5e5342c6bae248090de78c68
-    parentId: wrk_b18497235b484bf6a5244309ef1a9254
-    modified: 1647709878690
-    created: 1647709856092
+  - _id: fld_54f9a5116eeb4c868fe23a6639641081
+    parentId: wrk_30725d7a24e74553b738540b6d101bab
+    modified: 1651112120842
+    created: 1651112120842
     name: Ratings
     description: ""
     environment: {}
     environmentPropertyOrder: null
     metaSortKey: -1647709856192
     _type: request_group
-  - _id: req_0dd44deea85b4746b96126f81844ab46
-    parentId: fld_8c73ca2b5e5342c6bae248090de78c68
-    modified: 1647947828930
-    created: 1647947554205
+  - _id: req_f5813544a9a94d25802337bf265532ac
+    parentId: fld_54f9a5116eeb4c868fe23a6639641081
+    modified: 1651112120862
+    created: 1651112120862
     url: http://localhost:3000/api/ratings/ratingactivity
     name: Add Rating Activity
     description: ""
@@ -384,10 +474,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_408c758038a54f49a71e7ef876841b1a
-    parentId: fld_8c73ca2b5e5342c6bae248090de78c68
-    modified: 1647947624589
-    created: 1647947613343
+  - _id: req_dd0248544760453ab816720b667552ca
+    parentId: fld_54f9a5116eeb4c868fe23a6639641081
+    modified: 1651112120868
+    created: 1651112120868
     url: http://localhost:3000/api/ratings/ratinguser
     name: Add Rating User
     description: ""
@@ -416,10 +506,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_7f892e4d57d241f8a82ded68d288d36d
-    parentId: fld_8c73ca2b5e5342c6bae248090de78c68
-    modified: 1647709898485
-    created: 1647708807928
+  - _id: req_d8aef96722dd422eb8b95db28a5ab072
+    parentId: fld_54f9a5116eeb4c868fe23a6639641081
+    modified: 1651112120845
+    created: 1651112120845
     url: http://localhost:3000/api/ratings
     name: Get Ratings
     description: ""
@@ -437,10 +527,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_298d5977d3c14e11b0121fafd07942f4
-    parentId: fld_8c73ca2b5e5342c6bae248090de78c68
-    modified: 1647709899736
-    created: 1647708807931
+  - _id: req_fe558086ba314003a11c9080ebb308ee
+    parentId: fld_54f9a5116eeb4c868fe23a6639641081
+    modified: 1651112120849
+    created: 1651112120849
     url: http://localhost:3000/api/ratings/YourName
     name: Get RatingsByName
     description: ""
@@ -458,10 +548,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_2588313af99045ac9b9aa7592c2eb906
-    parentId: fld_8c73ca2b5e5342c6bae248090de78c68
-    modified: 1647947671638
-    created: 1647947649733
+  - _id: req_8c96872232444cf8b318255284a0032b
+    parentId: fld_54f9a5116eeb4c868fe23a6639641081
+    modified: 1651112120876
+    created: 1651112120876
     url: http://localhost:3000/api/ratings/ratingRef
     name: Delete Rating
     description: ""
@@ -479,10 +569,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_9f9ff27540b346718736132cad359f4a
-    parentId: fld_ca725853e8fd4ac2ae55f1c07ad2c4fd
-    modified: 1647947593184
-    created: 1647946886345
+  - _id: req_1f2d5a57c9a54a47b7685d3d4e159f06
+    parentId: fld_bb315497a68a4f55b383f74348f26385
+    modified: 1651112120888
+    created: 1651112120888
     url: http://localhost:3000/api/messages/user
     name: Add Message User
     description: ""
@@ -510,20 +600,20 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: fld_ca725853e8fd4ac2ae55f1c07ad2c4fd
-    parentId: wrk_b18497235b484bf6a5244309ef1a9254
-    modified: 1647947799150
-    created: 1647946826663
+  - _id: fld_bb315497a68a4f55b383f74348f26385
+    parentId: wrk_30725d7a24e74553b738540b6d101bab
+    modified: 1651112120885
+    created: 1651112120885
     name: Messages
     description: ""
     environment: {}
     environmentPropertyOrder: null
     metaSortKey: -1647709856142
     _type: request_group
-  - _id: req_a8c3268a86e045359cd229b4daace8de
-    parentId: fld_ca725853e8fd4ac2ae55f1c07ad2c4fd
-    modified: 1647947594136
-    created: 1647946983552
+  - _id: req_5f0d2d7504304ddc88012e643b0707b8
+    parentId: fld_bb315497a68a4f55b383f74348f26385
+    modified: 1651112120893
+    created: 1651112120893
     url: http://localhost:3000/api/messages/activity
     name: Add Message Activity
     description: ""
@@ -551,10 +641,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_94376c6345454f1292a6fd9810de93dc
-    parentId: fld_ca725853e8fd4ac2ae55f1c07ad2c4fd
-    modified: 1647947335648
-    created: 1647947064127
+  - _id: req_7e3ba96231db4a578dd85d555c8b9419
+    parentId: fld_bb315497a68a4f55b383f74348f26385
+    modified: 1651112120897
+    created: 1651112120897
     url: http://localhost:3000/api/messages
     name: Get Messages
     description: ""
@@ -572,10 +662,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_01e94ae96d48492291e67b49a64f6fe8
-    parentId: fld_ca725853e8fd4ac2ae55f1c07ad2c4fd
-    modified: 1647947341870
-    created: 1647947268340
+  - _id: req_f67e020009084d8a972a923d67629010
+    parentId: fld_bb315497a68a4f55b383f74348f26385
+    modified: 1651112120906
+    created: 1651112120906
     url: http://localhost:3000/api/messages/activity/activityRef
     name: Get MessagesByActivity
     description: ""
@@ -593,10 +683,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_21a08ff6867244bf8bda09d00dafcf32
-    parentId: fld_ca725853e8fd4ac2ae55f1c07ad2c4fd
-    modified: 1647947345653
-    created: 1647947307850
+  - _id: req_73bd1b2778064a03bc7c4e386eb81ed0
+    parentId: fld_bb315497a68a4f55b383f74348f26385
+    modified: 1651112120910
+    created: 1651112120910
     url: http://localhost:3000/api/messages/receiver/receiverRef
     name: Get MessagesByReceiver
     description: ""
@@ -614,10 +704,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_75bd3f6fb0024fd5913761a33d67df1d
-    parentId: fld_ca725853e8fd4ac2ae55f1c07ad2c4fd
-    modified: 1647947405051
-    created: 1647947385965
+  - _id: req_6e60a3be7bb64403b957eba19a7411f7
+    parentId: fld_bb315497a68a4f55b383f74348f26385
+    modified: 1651112120917
+    created: 1651112120917
     url: http://localhost:3000/api/messages/sender/senderRef
     name: Get MessagesBySender
     description: ""
@@ -635,10 +725,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: req_81e4ccdb7a2545769778c296c9b283e9
-    parentId: fld_ca725853e8fd4ac2ae55f1c07ad2c4fd
-    modified: 1647947350931
-    created: 1647947099158
+  - _id: req_92a0b1b4aca045c487230287657e3873
+    parentId: fld_bb315497a68a4f55b383f74348f26385
+    modified: 1651112120902
+    created: 1651112120902
     url: http://localhost:3000/api/messages/messageRef
     name: Delete Message
     description: ""
@@ -656,10 +746,10 @@ resources:
     settingRebuildPath: true
     settingFollowRedirects: global
     _type: request
-  - _id: env_ac7b21351f82418b84a3dbdf0eed4f8f
-    parentId: wrk_b18497235b484bf6a5244309ef1a9254
-    modified: 1647708807886
-    created: 1647708807886
+  - _id: env_aedacaa84a2149d4873033790623ba6d
+    parentId: wrk_30725d7a24e74553b738540b6d101bab
+    modified: 1651112120765
+    created: 1651112120765
     name: Base Environment
     data: {}
     dataPropertyOrder: null
@@ -667,18 +757,18 @@ resources:
     isPrivate: false
     metaSortKey: 1646138231820
     _type: environment
-  - _id: jar_d582ea94e0744630aaa5a0ad47195024
-    parentId: wrk_b18497235b484bf6a5244309ef1a9254
-    modified: 1647708807890
-    created: 1647708807890
+  - _id: jar_366020999ba9441d80327fc6a3dca1e1
+    parentId: wrk_30725d7a24e74553b738540b6d101bab
+    modified: 1651112120770
+    created: 1651112120770
     name: Default Jar
     cookies: []
     _type: cookie_jar
-  - _id: spc_e5c188bd764b4b1ca7f3201db9fecf0f
-    parentId: wrk_b18497235b484bf6a5244309ef1a9254
-    modified: 1647708807959
-    created: 1647708807897
-    fileName: API Rest - G1
+  - _id: spc_1e3cf203d0124b898fb760d0e6252fef
+    parentId: wrk_30725d7a24e74553b738540b6d101bab
+    modified: 1651112120957
+    created: 1651112120777
+    fileName: FME
     contents: ""
     contentType: yaml
     _type: api_spec
